--- a/.github/workflows/syncupstream.yml
+++ b/.github/workflows/syncupstream.yml
@@ -1,3 +1,4 @@
+name: syncupstream
 on:
   schedule:
     - cron:  '0 7 * * *'
@@ -29,7 +30,7 @@ jobs:
         upstream_sync_repo: restic/restic
 
         # Set test_mode true to run tests instead of the true action!!
-        test_mode: true
+        #test_mode: true
       
     # Step 3: Display a sample message based on the sync output var 'has_new_commits'
     - name: New commits found
